<resources>
    <string name="app_name">Pelayanan UPA-TIK</string>
    <string name="logo_itk">Logo ITK</string>
    <string name="pelayanan_upa_tik">Pelayanan UPA-TIK</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="riwayat">Riwayat</string>
    <string name="scan">Scan</string>
    <string name="profil">Profil</string>
    <string name="icon_layanan">Icon Layanan</string>
    <string name="peminjaman_barang">Peminjaman Barang</string>
    <string name="pembuatan_website">Pembuatan Website, Sub Domain, dll.</string>
    <string name="lihat_riwayat_peminjaman_barang_disini"><![CDATA[Lihat Riwayat Peminjaman Barang disini >>]]></string>
    <string name="layanan">Layanan</string>
    <string name="lihat_riwayat_permintaan_layanan_disini"><![CDATA[Lihat Riwayat Permintaan Layanan disini >>]]></string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="user_1">User 1</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="nim">NIM</string>
    <string name="_11201011">11201011</string>
    <string name="program_studi">Program Studi</string>
    <string name="informatika">Informatika</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_0852341234">0852341234</string>
    <string name="bantuan_operator_tik">Bantuan Operator TIK</string>
    <string name="pemasangan_perangkat">Pemasangan Perangkat</string>
    <string name="pengaduan_layanan">Pengaduan Layanan</string>
    <string name="pemeliharaan_akun">Pemeliharaan Akun</string>
    <string name="scanner_frame">Scanner Frame</string>
    <string name="batal">BATAL</string>
    <string name="scan_barang">Scan Barang</string>
    <string name="gambar_barang">Gambar Barang</string>
    <string name="router_mikrotik_hap_lite">Router Mikrotik hAp Lite</string>
    <string name="alat_jaringan">Alat Jaringan</string>
    <string name="tambah">TAMBAH</string>
    <string name="pinjam">Pinjam</string>
    <string name="pilih_semua">Pilih Semua</string>
    <string name="upa_tik">UPA-TIK</string>
    <string name="bell">bell</string>
    <string name="nama_perangkat">Nama Perangkat</string>
    <string name="tujuan_peminjaman">Tujuan Peminjaman</string>
    <string name="keperluan_praktikum">Keperluan Praktikum</string>
    <string name="harapan_anda">Harapan Anda</string>
    <string name="nama_penanggung_jawab">Nama Penanggung Jawab</string>
    <string name="kontak_penanggung_jawab">Kontak Penanggung Jawab</string>
    <string name="surat_permohonan">Surat Permohonan</string>
    <string name="max_2mb">Max. 2MB</string>
    <string name="no_file_selected">No file selected</string>
    <string name="choose_file">CHOOSE FILE</string>
    <string name="submit">SUBMIT</string>
    <string name="lapor_kerusakan">LAPOR KERUSAKAN</string>
    <string name="keterangan_kerusakan">Keterangan Kerusakan</string>
    <string name="input_gambar">Input Gambar (Opsional)</string>
    <string name="layanan_yang_dikeluhkan">Layanan yang Dikeluhkan</string>
    <string name="keluhan_anda">Keluhan Anda</string>
    <string name="tujuan_pemasangan">Tujuan Pemasangan</string>
    <string name="jenis_perangkat">Jenis Perangkat</string>
    <string name="layanan_yang_diajukan">Layanan yang Diajukan</string>
    <string name="subdomain">SubDomain</string>
    <string name="hosting">Hosting</string>
    <string name="virtual_private_server_vps">Virtual Private Server (VPS)</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="lainnya">Lainnya</string>
    <string name="sebutkan_layanan_lainnya">Sebutkan Layanan Lainnya</string>
    <string name="tujuan_pembuatan">Tujuan Pembuatan</string>
    <string name="jumlah_operator">Jumlah Operator yang Dibutuhkan</string>
    <string name="_1_orang">1 orang</string>
    <string name="_2_orang">2 orang</string>
    <string name="_3_orang">3 orang</string>
    <string name="sebutkan_jumlah_operator">Sebutkan Jumlah Operator</string>
    <string name="gerbang_itk">GERBANG ITK</string>
    <string name="microsoft_365">Microsoft 365</string>
    <string name="bukti_data_diri">Bukti Data Diri</string>
    <string name="alasan_pemeliharaan">Alasan Pemeliharaan</string>
    <string name="nama_akun_layanan">Nama Akun Layanan</string>
    <string name="jenis_pemeliharaan">Jenis Pemeliharaan</string>
    <string name="reset_password_akun">Reset Password Akun</string>
    <string name="perubahan_penambahan_data_layanan">Perubahan/penambahan data layanan</string>
    <string name="penambahan_penyimpanan">Penambahan Penyimpanan</string>
    <string name="all">All</string>
    <string name="diajukan">Diajukan</string>
    <string name="selesai">Selesai</string>
    <string name="diambil">Diambil</string>
    <string name="ambil">Ambil</string>
    <string name="in_review">In Review</string>
    <string name="diterima">Diterima</string>
    <string name="proses_pengerjaan">Proses Pengerjaan</string>
    <string name="ditolak">Ditolak</string>
    <string name="terkirim">Terkirim</string>
    <string name="your_web_client_id">991351593285-i4ismmlkqkdiqoetm9641uqkv54lppmg.apps.googleusercontent.com</string>
    <string name="default_web_client_id">991351593285-i4ismmlkqkdiqoetm9641uqkv54lppmg.apps.googleusercontent.com</string>
    <string name="logout">Log OUT</string>
    <string name="scanning">Memindai...</string>
    <string name="proyektor_sony_dx100">PROYEKTOR SONY DX100</string>
    <string name="tanggal_masuk">Tanggal Masuk</string>
    <string name="_1_januari_2023">1 Januari 2023</string>
    <string name="jenis_barang">Jenis Barang</string>
    <string name="elektronik">Elektronik</string>
    <string name="pemilik_barang_unit">Pemilik Barang (Unit)</string>
    <string name="gedung_g">Gedung G</string>
    <string name="letak_barang">Letak Barang</string>
    <string name="ruangan_g_205">Ruangan G-205</string>
    <string name="_4a185048w">4A185048W</string>
    <string name="serial_number">Serial Number</string>
    <string name="change_image">File Selected</string>
    <string name="sebutkan_jenis_pemeliharaan">Sebutkan Jenis Pemeliharaan</string>
    <string name="box">Box</string>
    <!-- Form Peminjaman -->
    <string name="submit_button">Submit</string>
    <string name="submitting">Mengirim...</string>
    <string name="peminjaman_success">Peminjaman berhasil diajukan!</string>
    <string name="update_status_failed">Gagal mengupdate status barang</string>
    <string name="peminjaman_failed">Gagal mengirim peminjaman: %1$s</string>

    <!-- File Selection -->
    <string name="file_selected">File dipilih: %1$s</string>
    <string name="change_file">Ganti File</string>

    <!-- ProductList -->
    <string name="toolbar_title_with_box">Daftar Barang (Box: %1$d)</string>
    <string name="toolbar_title">Daftar Barang</string>
    <string name="item_already_in_box">%1$s sudah ada di box</string>
    <string name="item_added_to_box">%1$s ditambahkan ke box</string>
    <string name="failed_fetch_data">Gagal mengambil data</string>

    <!-- Box Fragment -->
    <string name="box_empty_message">Belum ada barang ditambahkan</string>
    <string name="pinjam_with_count">Pinjam (%1$d)</string>
    <string name="select_all">Pilih Semua</string>
    <string name="select_all_with_count">Pilih Semua (%1$d/%2$d)</string>
    <string name="_0">0</string>
    <string name="more">more</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="rentang_tanggal">Rentang Tanggal</string>
    <string name="belum_ada_layanan_yang_terkirim">Belum ada layanan yang Terkirim</string>
    <string name="belum_ada_layanan_yang_diterima">Belum Ada Layanan yang Diterima</string>
    <string name="belum_ada_pengajuan_layanan_di_draft">Belum ada pengajuan layanan di Draft</string>
    <string name="belum_ada_layanan_yang_selesai">Belum Ada Layanan yang Selesai</string>
    <string name="belum_ada_layanan_yang_sedang_in_review">Belum ada layanan yang sedang In Review</string>
    <string name="belum_ada_layanan_yang_dalam_proses_pengerjaan">Belum ada layanan yang dalam proses pengerjaan</string>
    <string name="belum_ada_layanan_yang_ditolak">Belum ada layanan yang ditolak</string>
    <string name="batalkan">BATALKAN</string>
    <string name="belum_ada_peminjaman_yang_diajukan">Belum Ada Peminjaman yang Diajukan</string>
    <string name="belum_ada_peminjaman_yang_disetujui">Belum Ada Peminjaman yang Disetujui</string>
    <string name="barang_sudah_saya_ambil">Sudah Ambil</string>
    <string name="barang_sudah_saya_kembalikan">Sudah Kembali</string>
    <string name="edit_pemeliharaan_akun">Edit Pemeliharaan Akun</string>
    <string name="updating">Updating...</string>
    <string name="edit_bantuan_operator_tik">Edit Bantuan Operator TIK</string>
    <string name="edit_pemasangan_perangkat">Edit Pemasangan Perangkat</string>
    <string name="edit_pengaduan_layanan">Edit Pengaduan Layanan</string>
    <string name="edit_pembuatan_web_dll">Edit Pembuatan Website, Sub Domain, Dll</string>
    <string name="edit_laporan_kerusakan">Edit Laporan Kerusakan</string>
    <string name="gambarbarang">GambarBarang</string>
    <string name="feedback_message">Feedback Message</string>
    <string name="rating">Rating:</string>
    <string name="komentar_opsional">Komentar (opsional):</string>
    <string name="tulis_komentar_anda">Tulis komentar Anda...</string>
    <string name="lewati">Lewati</string>
    <string name="kirim_feedback">Kirim Feedback</string>
    <string name="nomor_telepon_harus_minimal_10_digit_dan_format_valid">Nomor telepon harus minimal 10 digit dan format valid</string>
    <string name="input_file">Input File (Opsional)</string>
    <string name="belum_ada_notifikasi">Belum ada notifikasi</string>
    <string name="notifikasi">Notifikasi</string>
</resources>