<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/profil"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namaLengkapLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nama_lengkap"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/user_1"
            android:textColor="@color/black"
            android:enabled="false"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pekerjaanLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pekerjaan"
        app:boxStrokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/namaLengkapLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mahasiswa"
            android:textColor="@color/black"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nimLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nim"
        app:boxStrokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/pekerjaanLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_11201011"
            android:textColor="@color/black"
            android:inputType="number"
            android:enabled="false"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/programStudiLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/program_studi"
        app:boxStrokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/nimLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informatika"
            android:textColor="@color/black"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomorTeleponLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nomor_telepon"
        app:boxStrokeColor="@color/black"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_edit"
        app:layout_constraintTop_toBottomOf="@+id/programStudiLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0852341234"
            android:textColor="@color/black"
            android:inputType="phone"
            android:enabled="false"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>